deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.1.20
        command: [
          "/usr/local/bin/etcd",
          "-advertise-client-urls=http://0.0.0.0:2379",
          "-listen-client-urls=http://0.0.0.0:2379",
          "-data-dir=data.etcd"
        ]
        resources:
          limits:
            cpu: 25m
            memory: 5Mi
        ports:
          - containerPort: 2379
        volumeMounts:
        - mountPath: /data.etcd
          name: etcd-data
      volumes:
      - name: etcd-data
        persistentVolumeClaim:
          claimName: etcd-data
