service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  ports:
  - port: 80
    targetPort: 2379
    protocol: TCP
  selector:
    app: etcd
