ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
spec:
  backend:
    serviceName: etcd
    servicePort: 80
